--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {
     "@iconify/svelte": "^3.1.0",
     "@playwright/test": "^1.28.1",
+    "@splidejs/svelte-splide": "^0.2.9",
+    "@supabase/auth-helpers-sveltekit": "^0.8.7",
+    "@supabase/supabase-js": "^2.7.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-vercel": "^2.0.1",
     "@sveltejs/kit": "^1.0.13",
@@ -31,7 +34,5 @@
     "vite": "^4.0.4"
   },
   "type": "module",
-  "dependencies": {
-    "@splidejs/svelte-splide": "^0.2.9"
-  }
+  "dependencies": {}
 }
