--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.28.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.3",
     "tailwindcss": "^3.2.4",
