--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "yarn pre-build && vite build",
         "pre-build": "yarn check && yarn lint && yarn prettier --check ./src",
         "preview": "vite preview",
+        "format": "yarn prettier --write ./src",
         "test": "playwright test",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -29,6 +30,7 @@
         "postcss": "^8.4.23",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
+        "prettier-plugin-tailwindcss": "^0.2.8",
         "svelte": "^3.54.0",
         "svelte-check": "^3.0.4",
         "tailwindcss": "^3.2.7",
