--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "lint": "eslint ."
     },
     "devDependencies": {
-        "@iconify/svelte": "^3.1.3",
         "@playwright/test": "^1.28.1",
         "@splidejs/svelte-splide": "^0.2.9",
         "@supabase/auth-helpers-sveltekit": "^0.8.7",
@@ -27,6 +26,7 @@
         "autoprefixer": "^10.4.14",
         "eslint": "^8.28.0",
         "eslint-plugin-svelte3": "^4.0.0",
+        "lucide-svelte": "^0.214.0",
         "postcss": "^8.4.23",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
