--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
         "lint": "eslint ."
     },
     "devDependencies": {
-        "@playwright/test": "^1.28.1",
+        "@playwright/test": "^1.33.0",
         "@splidejs/svelte-splide": "^0.2.9",
-        "@supabase/auth-helpers-sveltekit": "^0.8.7",
-        "@supabase/supabase-js": "^2.7.1",
+        "@supabase/auth-helpers-sveltekit": "^0.9.4",
+        "@supabase/supabase-js": "^2.21.0",
         "@sveltejs/adapter-auto": "^2.0.1",
-        "@sveltejs/adapter-vercel": "^2.0.4",
-        "@sveltejs/kit": "^1.0.13",
-        "@typescript-eslint/eslint-plugin": "^5.45.1",
-        "@typescript-eslint/parser": "^5.45.1",
+        "@sveltejs/adapter-vercel": "^2.4.3",
+        "@sveltejs/kit": "^1.16.2",
+        "@typescript-eslint/eslint-plugin": "^5.59.2",
+        "@typescript-eslint/parser": "^5.59.2",
         "autoprefixer": "^10.4.14",
-        "eslint": "^8.28.0",
+        "eslint": "^8.40.0",
         "eslint-plugin-svelte3": "^4.0.0",
         "lucide-svelte": "^0.214.0",
         "postcss": "^8.4.23",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
         "prettier-plugin-tailwindcss": "^0.2.8",
-        "svelte": "^3.54.0",
-        "svelte-check": "^3.0.4",
-        "tailwindcss": "^3.2.7",
-        "tslib": "^2.4.1",
+        "svelte": "^3.59.0",
+        "svelte-check": "^3.3.1",
+        "tailwindcss": "^3.3.2",
+        "tslib": "^2.5.0",
         "typescript": "^4.9.5",
-        "vite": "^4.0.4"
+        "vite": "^4.3.5",
+        "vitest": "^0.31.0"
     },
     "type": "module",
     "dependencies": {}
